--- a/FRONT-UBER-APP/src/index.html
+++ b/FRONT-UBER-APP/src/index.html
@@ -14,7 +14,9 @@
 
 <body class="mat-typography">
   <app-root></app-root>
-
+  <script type="application/javascript">
+    var global = window;
+  </script>
 </body>
 
 </html>
